--- a/1456.定长子串中元音的最大数目.ipynb
+++ b/1456.定长子串中元音的最大数目.ipynb
@@ -41,6 +41,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxVowels(s: str, k: int) -> int:\n",
+    "    ans = vowel = 0\n",
+    "    for i, c in enumerate(s):\n",
+    "        # 1. 进入窗口\n",
+    "        if c in \"aeiou\":\n",
+    "            vowel += 1\n",
+    "        if i < k - 1:  # 窗口大小不足 k\n",
+    "            continue\n",
+    "        # 2. 更新答案\n",
+    "        ans = max(ans, vowel)\n",
+    "        # 3. 离开窗口\n",
+    "        if s[i - k + 1] in \"aeiou\":\n",
+    "            vowel -= 1\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [
