--- a/1652.拆炸弹.ipynb
+++ b/1652.拆炸弹.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,59 @@
     "                ans.append(sum(code[:i]) + sum(code[-(-k - i):]))\n",
     "        return ans\n",
     "    else:\n",
-    "        return [0 for _ in code]"
+    "        return [0] * length\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decrypt(code:list[int], k: int) -> list[int]:\n",
+    "    n = len(code)\n",
+    "    new_code = code * 3\n",
+    "    if k>0:\n",
+    "        code[0] = sum(new_code[n+1:n+k+1])\n",
+    "        for i, (in_, out) in enumerate(zip(new_code[n+k+1:], new_code[n+1:])):\n",
+    "            code[i+1] = code[i] + in_ - out\n",
+    "            if i == n-2:\n",
+    "                return code\n",
+    "    elif k<0:\n",
+    "        code[0] = sum(new_code[n+k:n])\n",
+    "        for i, (in_, out) in enumerate(zip(new_code[n:], new_code[n+k:])):\n",
+    "            code[i+1] = code[i] + in_ - out\n",
+    "            if i == n-2:\n",
+    "                return code\n",
+    "    else:\n",
+    "        return [0] * n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# k的正负与否只影响初始窗口的位置\n",
+    "def decrypt(code:list[int], k: int) -> list[int]:\n",
+    "    n = len(code)\n",
+    "    code *= 3\n",
+    "    ans = [0]*n\n",
+    "    r = n+k+1 if k>0 else n\n",
+    "    k = abs(k)\n",
+    "    ans[0] = sum(code[r-k:r])\n",
+    "    for i, (in_, out) in enumerate(zip(code[r:], code[r-k:])):\n",
+    "        if i+1 < n:\n",
+    "            ans[i+1] = ans[i] + in_ - out\n",
+    "        else:\n",
+    "            return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +94,7 @@
     "    s = sum(code[r - k: r])  # ans[0]\n",
     "    for i in range(n):\n",
     "        ans[i] = s\n",
+    "        # 这里不采用扩展数列的方法 而是直接用code[r%n]作为in_ 当窗口滑到头的时候 它自动从0开始\n",
     "        s += code[r % n] - code[(r - k) % n]\n",
     "        r += 1\n",
     "    return ans"
@@ -54,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[12, 5, 6, 13]"
+       "[0, 0, 0, 0]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,6 +119,8 @@
    "source": [
     "code = [2,4,9,3]\n",
     "k = -2\n",
+    "# code = [5,7,1,4]\n",
+    "# k = 3\n",
     "decrypt(code, k)"
    ]
   }
@@ -91,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
