--- a/209.长度最小的子数组.ipynb
+++ b/209.长度最小的子数组.ipynb
@@ -45,35 +45,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 先不断地往右加, 当满足条件的时候再不断缩减左边界\n",
     "def minSubArrayLen(target, nums):\n",
     "    left = 0\n",
-    "    length = len(nums)\n",
-    "    ans = temp = length + 1\n",
-    "    for right in range(1, length):\n",
-    "        while sum(nums[left:right+1]) > target:\n",
-    "            temp = right - left\n",
+    "    temp = 0\n",
+    "    n = len(nums)\n",
+    "    ans = n + 1\n",
+    "    for right in range(n):\n",
+    "        temp += nums[right]\n",
+    "        while temp >= target:\n",
+    "            ans = min(ans, right-left+1)\n",
+    "            temp -= nums[left]\n",
     "            left += 1\n",
-    "        ans = min(ans, temp)\n",
-    "    return ans if ans<=length else 0"
+    "    return 0 if ans == n+1 else ans"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "8"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,26 +84,6 @@
     "target = 213\n",
     "nums = [12,28,83,4,25,26,25,2,25,25,25,12]\n",
     "minSubArrayLen(target, nums)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[1,2,3][-3:]"
    ]
   }
  ],
@@ -121,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
